button align fixed

--- a/style.css
+++ b/style.css
@@ -356,14 +356,16 @@ button {
   display: flex;
   width: 85px;
   flex-direction: column;
-  justify-content: center;
+ 
 }
 .btn_img{
+  
   position: relative;
 }
 .subscribe_btn_text{
   position: absolute;
   padding-left: 18px;
+  padding-top: 15px;
 }
 .footer {
   background-color: #222224;
